--- a/styles/css/vtex.slider-layout.css
+++ b/styles/css/vtex.slider-layout.css
@@ -211,7 +211,7 @@
   margin-top: -40px;
 }
 :global(.vtex-account__page-body) .slide--shelf {
-  width: 36% !important;
+  width: 25% !important;
 }
 :global(.vtex-account__page-body) .sliderTrack--shelf{
   justify-content: flex-start;
@@ -228,9 +228,20 @@
 .sliderLayoutContainer--vitrinaGigante .slide--shelf {
   margin-bottom: 0;
 }
+.sliderLayoutContainer--comparison-page .sliderArrows::before{
+  box-shadow: 0px 0px 20px rgb(0 0 0 / 7%);
+  border-radius: 50%;
+  left: 0%;
+}
+.sliderLayoutContainer--comparison-page .sliderRightArrow {
+  box-shadow: 0px 0px 20px rgb(0 0 0 /7%);
+  border-radius: 50%;
+  right: 40px;
+}
+
 @media (max-width: 600px) {
   :global(.vtex-account__page-body) .slide--shelf {
-    width: auto !important;
+    width: 100% !important;
   }
   .sliderLayoutContainer--marcas-carousel {
     padding: 0 0px 0 30px;
