--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -302,7 +302,7 @@
   border-radius: 5px;
 }
 .logoImage--logo {
-  width: 87px;
+  width: 107px;
   margin: 5px 0;
 }
 .searchBarInnerContainer :global(.vtex-input-prefix__group){
@@ -610,7 +610,7 @@
   display: none !important;
 }
 .imageElement--favoritos-image {
-  width: 20%;
+  width: 30px;
   margin: 0 3px 0 0px!important;
 }
 .imageElementLink--favoritos-image{
@@ -650,7 +650,7 @@
 .imageElement--servicioAlClienteImageInfo {
   margin: auto;
   max-width: 95%;
-  height: fit-content;
+  max-height: 661px;
 }
 
 .imageElement--Hechopor {
