--- a/styles/css/vtex.login.css
+++ b/styles/css/vtex.login.css
@@ -390,4 +390,7 @@
         width: 43px;
         height: 38px;
     }
+    :global(.vtex-flex-layout-0-x-flexColChild--productInfo2){
+        height: auto !important;
+    }
 }
