--- a/styles/css/vtex.product-highlights.css
+++ b/styles/css/vtex.product-highlights.css
@@ -214,4 +214,7 @@
   .productHighlightWrapper--collection{
     background: transparent !important;
   }
+  :global(.vtex-flex-layout-0-x-flexColChild--productInfo3) .productHighlightWrapper--collection[data-highlight-id="142"]{
+    display: none;
+  }
 }
